# TempProject

Client/: AddFriendDialog.cpp  AddFriendDialog.h  AddFriendDialog.ui  Client.pro  CreateGroupDialog.cpp  CreateGroupDialog.h  CreateGroupDialog.ui  LoginDialog.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  NetworkManager.cpp  NetworkManager.h  RegisterDialog.cpp  RegisterDialog.h  RegisterDialog.ui  chatMsg.hpp  main.cpp
Server/: server.cpp
qt_chat_client/: CMakeLists.txt  build.sh  main.cpp  resources.qrc  项目结构与开发指南.txt
qt_chat_client/include/: chatwindow.h  contactlistmodel.h  loginwindow.h  message.h  user.h
qt_chat_client/qml/: ContactItemDelegate.qml
qt_chat_client/src/: chatwindow.cpp  contactlistmodel.cpp  loginwindow.cpp  message.cpp  user.cpp
qt_chat_client/ui/: chatwindow.ui  loginwindow.ui
